# unistate-ckb

./: .env  .gitignore  Cargo.toml  README.md  ckb-miner.toml  ckb.toml  docker-compose.yml  generate_and_replace.sh  unistate.toml  update_schemas.sh
.github/workflows/: release.yml
benches/: categorize.rs
crates/celldep_height_finder/: Cargo.toml
crates/celldep_height_finder/src/: lib.rs
crates/constants/: Cargo.toml
crates/constants/src/: lib.rs
crates/fetcher/: Cargo.toml
crates/fetcher/src/: lib.rs  wrapper.rs
crates/utils/: Cargo.toml
crates/utils/src/: address.rs  lib.rs  network.rs
migrations/: 0001_spore.down.sql  0001_spore.up.sql  0002_rgbpp.down.sql  0002_rgbpp.up.sql  0003_index.down.sql  0003_index.up.sql  0004_xudt.down.sql  0004_xudt.up.sql  0005_add_optional_fields_to_token_info.down.sql  0005_add_optional_fields_to_token_info.up.sql  0006_update_spore_actions_and_burn_logic.down.sql  0006_update_spore_actions_and_burn_logic.up.sql  0007_add_inscription_id.down.sql  0007_add_inscription_id.up.sql  0008_add_type_id_to_spores_and_clusters.down.sql  0008_add_type_id_to_spores_and_clusters.up.sql  0009_set_type_id_not_null_in_spores_and_clusters.down.sql  0009_set_type_id_not_null_in_spores_and_clusters.up.sql  0010_add_comments.down.sql  0010_add_comments.up.sql  0011_refactor_schema.down.sql  0011_refactor_schema.up.sql  0012_fix_spore_actions_primary_key.down.sql  0012_fix_spore_actions_primary_key.up.sql  0013_replace_action_index_with_output_index.down.sql  0013_replace_action_index_with_output_index.up.sql  0014_clear_spore_actions_data.down.sql  0014_clear_spore_actions_data.up.sql
schemas/: xudt_rce.mol
src/: categorization.rs  config.rs  constants.rs  database.rs  error.rs  fetcher.rs  helper.rs  index.rs  inscription.rs  main.rs  operations.rs  rgbpp.rs  spore.rs  unique.rs  xudt.rs
src/entity/: addresses.rs  block_height.rs  cluster_actions.rs  clusters.rs  mod.rs  prelude.rs  rgbpp_locks.rs  rgbpp_unlocks.rs  sea_orm_active_enums.rs  spore_actions.rs  spores.rs  token_info.rs  transaction_outputs_status.rs  xudt_cell.rs  xudt_cells.rs  xudt_status_cell.rs  xudtcell.rs
src/schemas/: action.rs  basic.rs  blockchain.rs  mod.rs  rgbpp.rs  spore.rs  spore_v1.rs  spore_v2.rs  top_level.rs  xudt_rce.rs
