[package]
name = "unistate-ckb"
version = "0.2.0"
edition = "2021"
authors = ["Cupnfish <cupnfish@icloud.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/unistate-io/unistate-ckb"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0"
async-scoped = "0.9"
bigdecimal = "0.4"
ckb-fixed-hash-core = "0.119"
ckb-gen-types = "0.119"
ckb-hash = "0.119"
ckb-jsonrpc-types = "0.119"
ckb-sdk = { version = "3.5", git = "https://github.com/nervosnetwork/ckb-sdk-rust.git", rev = "b2aafcc6d52fbfb2d005067b0f9755d427477d2f" }
ckb-types = "0.119"
chrono = "0.4"
criterion = "0.5"
const_field_count = "0.1"
dashmap = "6.1"
dotenvy = "0.15"
figment = "0.10"
futures = "0.3"
hex = "0.4.3"
hex-literal = "0.4"
jsonrpsee = "0.24"
molecule = "0.8.0"
rand = "0.8.5"
rayon = "1.0"
sea-orm = "1.1"
serde = "1.0"
serde_json = "1.0"
sha3 = "0.10"
thiserror = "2.0"
tokio = "1.41"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
redb = "2.2"
bincode = "1.3"
clap = "4.5"
parking_lot = "0.12"
smallvec = "1.13"
prettytable-rs = "0.10"

[dependencies]
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
ckb-fixed-hash-core = { workspace = true }
ckb-gen-types = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
ckb-sdk = { workspace = true }
ckb-types = { workspace = true }
ckb-hash = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
molecule = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-bigdecimal",
], default-features = false }
bigdecimal = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true, features = ["serde"] }
sha3 = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
figment = { workspace = true, features = ["env", "test", "toml"] }
async-scoped = { workspace = true, features = ["use-tokio"] }
futures = { workspace = true }
dashmap = { workspace = true, features = ["rayon"] }
const_field_count = { workspace = true }
fetcher = { package = "unistate-fetcher", path = "./crates/fetcher" }
constants = { package = "unistate-constants", path = "./crates/constants" }
celldep_height_finder = { package = "unistate-celldep_height_finder", path = "./crates/celldep_height_finder" }

[dev-dependencies]
criterion = { workspace = true }
rand = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[[bench]]
name = "categorize"
harness = false

[profile.release]
debug = "limited"
lto = "thin"
codegen-units = 1
