[package]
name = "unistate-celldep_height_finder"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fetcher = { package = "unistate-fetcher", path = "../fetcher" }
constants = { package = "unistate-constants", path = "../constants" }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
prettytable-rs = { workspace = true }
