[package]
name = "unistate-constants"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-fixed-hash-core = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
ckb-sdk = { workspace = true }
ckb-types = { workspace = true }
hex-literal = { workspace = true }
rayon = { workspace = true }
