[package]
name = "unistate-constants"
version = "0.1.0"
edition = "2024"

[dependencies]
ckb-fixed-hash-core = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
ckb-types = { workspace = true }
hex-literal = { workspace = true }
rayon = { workspace = true }
utils = { package = "unistate-utils", path = "../utils" }
