[package]
name = "unistate-constants"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ckb-fixed-hash-core = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
ckb-types = { workspace = true }
hex-literal = { workspace = true }
rayon = { workspace = true }
utils = { package = "unistate-utils", path = "../utils" }
