[package]
name = "unistate-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
ckb-hash = { workspace = true }
ckb-fixed-hash-core = { workspace = true }
bech32 = { workspace = true }
ckb-types = { workspace = true }
thiserror = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
