[package]
name = "unistate-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
ckb-hash = { workspace = true }
ckb-fixed-hash-core = { workspace = true }
bech32 = { workspace = true }
ckb-types = { workspace = true }
thiserror = { workspace = true }
ckb-jsonrpc-types = { workspace = true }
